[package]
name = "logteewoop"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.18"
uuid = { version = "0.7.2", features = ["serde"] }
serde = { version = "1.0.87", features = ["derive"] }
parking_lot = "0.7.1"
futures = "0.1.25"
actix = "0.7.9"
failure = "0.1.5"
bytes = "0.4.11"
http = "0.1.15"
serde_json = "1.0.38"
chrono = { version = "0.4.6", features = ["serde"] }
structopt = "0.2.14"
